# switchbot-climate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  healthcheck.sh  pyproject.toml  requirements.txt  tox.toml
switchbot_climate/: __init__.py  __main__.py  client.py  device.py  remote.py  util.py  zone.py
tests/: test_client.py  test_device.py  test_main.py  test_remote.py  test_util.py  test_zone.py
